--- a/Productos.html
+++ b/Productos.html
@@ -16,33 +16,43 @@
         <SECTIon> 
             <div>
                 <ol class="Trufas" id="Chocolate">Trufas de chocolate</ol>  
+                <img src="img/Chocolate.jpg" alt="Trufachoco">
             </div>
             <div>
                 <ol class="Trufas" id="Limón">Trufas de limón</ol>
+                <img src="img/Limon.jpg" alt="Trulimon">
             </div>
             <div>    
                 <ol class="Trufas" id="Café">Trufas de café</ol>
+                <img src="img/Café.jpg" alt="Trucafe">
             </div>
             <div>      
                 <ol class="Trufas" id="Wisky">Trufas de wisky</ol>
+                <img src="img/wisky.jpg" alt="Truwisky">
             </div> 
             <div>   
                 <ol class="Trufas" id="Fresa">Trufas de fresa</ol>
+                <img src="img/Fresa.jpg" alt="Trufresa">
             </div> 
             <div>   
-                <ol class="Galletas" id="Chips">Galletas chips de chocolate con leche</ol>
+                <ol class="Galletas" id="Chips">Galletas chips de chocolate</ol>
+                <img src="img/Chips.jpg" alt="Chocochips">
             </div>    
             <div>
                 <ol class="Galletas" id="Chocoblanc">Galletas Chocolate blanco</ol>
+                <img src="img/Blanco.JPG" alt="Chocoblanc">
             </div>    
             <div>
                 <ol class="Fudge" id="Kinder">Fudge de kinder</ol>
+                <img src="img/fudge kinder.jfif" alt="FudgeKinder">
             </div>     
             <div>
                 <ol class="Fudge" id="Cochofudge">Fudge de chocolate</ol>
+                <img src="img/Fudge choco.jpg" alt="Fudgechoco">
             </div>
             <div>     
-                 <ol class="Brigadeiros" id="Brigadeiros">Brigadeiros</ol>
+                <ol class="Brigadeiros" id="Brigadeiros">Brigadeiros</ol>
+                <img src="img/Brigadeiro.jpg" alt="Brigadeiro">
             </div>     
         </SECTIon>
 </body>
