--- a/Nosotros.html
+++ b/Nosotros.html
@@ -11,6 +11,6 @@
         <a href="Leidi-web.html"><i class="fa-solid fa-gift"></i></a>
     </header>
     <p>Somos un emprendimiento nacido desde la universidad vendiendo entre clases a estudiantes y maestos para ayudar con los gastos respectivos, sin embargo, nos gustó tanto endulzar el día de las personas que decidimos expandirnos a todos los que quieran tener un bocadito de felicidad en forma de trufa.</p>
-    <img src="img/pUFFY TRUFAS (1).png" alt="Puffy">
+    <img src="img/Diseño sin título (2).png" alt="Puffy">
 </body>
 </html>
